SERVER-6515 slaveok query can fail early without trying the other nodes